5.0/de/25-notifier.rst
Benachrichtigungen auf allen Kanälen
=====================================

Die Gästebuchanwendung sammelt Feedback zu den Konferenzen. Wir sind jedoch nicht gut darin, unseren Nutzer*innen Feedback zu geben.

As comments are moderated, they probably don't understand why their comments are not published instantly. They might even re-submit them thinking there was some technical problems. Giving them feedback after posting a comment would be
great.

Außerdem sollten wir sie wahrscheinlich informieren, sobald ihr Kommentar veröffentlicht wurde. Wir verlangen ihre E-Mail-Adresse, also sollten wir sie auch verwenden.

Es gibt viele Möglichkeiten, Nutzer*innen zu benachrichtigen. E-Mail ist das Erste, woran Du vielleicht denkst. Benachrichtigungen innerhalb der Webanwendung sind ein weitere Möglichkeit. Wir könnten sogar überlegen, SMS-Nachrichten zu versenden und eine Nachricht auf Slack oder Telegram zu posten. Es gibt viele Möglichkeiten.

.. index::
    single: Components;Notifier
    single: Notifier

Die Symfony Notifier-Komponente implementiert viele Benachrichtigungsstrategien:

.. code-block:: bash

    $ symfony composer req notifier

Benachrichtigungen von Webanwendungen im Browser senden
-------------------------------------------------------

.. index::
    single: Flash Messages

Lass uns in einem ersten Schritt die Nutzer*innen direkt im Browser, nachdem sie einen Kommentar abgegeben haben darüber informieren, dass Kommentare moderiert werden:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Controller/ConferenceController.php
    +++ b/src/Controller/ConferenceController.php
    @@ -14,6 +14,8 @@ use Symfony\Component\HttpFoundation\File\Exception\FileException;
     use Symfony\Component\HttpFoundation\Request;
     use Symfony\Component\HttpFoundation\Response;
     use Symfony\Component\Messenger\MessageBusInterface;
    +use Symfony\Component\Notifier\Notification\Notification;
    +use Symfony\Component\Notifier\NotifierInterface;
     use Symfony\Component\Routing\Annotation\Route;
     use Twig\Environment;

    @@ -59,7 +61,7 @@ class ConferenceController extends AbstractController
         /**
          * @Route("/conference/{slug}", name="conference")
          */
    -    public function show(Request $request, Conference $conference, CommentRepository $commentRepository, string $photoDir): Response
    +    public function show(Request $request, Conference $conference, CommentRepository $commentRepository, NotifierInterface $notifier, string $photoDir): Response
         {
             $comment = new Comment();
             $form = $this->createForm(CommentFormType::class, $comment);
    @@ -88,9 +90,15 @@ class ConferenceController extends AbstractController

                 $this->bus->dispatch(new CommentMessage($comment->getId(), $context));

    +            $notifier->send(new Notification('Thank you for the feedback; your comment will be posted after moderation.', ['browser']));
    +
                 return $this->redirectToRoute('conference', ['slug' => $conference->getSlug()]);
             }

    +        if ($form->isSubmitted()) {
    +            $notifier->send(new Notification('Can you check your submission? There are some problems with it.', ['browser']));
    +        }
    +
             $offset = max(0, $request->query->getInt('offset', 0));
             $paginator = $commentRepository->getCommentPaginator($conference, $offset);

Der Notifier *sendet* (sends) eine *Nachricht* (notification) an die *Empfänger* (recipients) über einen *Kanal* (channel).

Eine Benachrichtigung hat einen Betreff (subject), einen optionalen Inhalt (content) und eine Wichtigkeit (importance).

Je nach Wichtigkeit wird eine Benachrichtigung auf einem oder mehreren Kanälen gesendet. Du kannst beispielsweise dringende Benachrichtigungen per SMS und regelmäßige Benachrichtigungen per E-Mail versenden.

Für Browser-Benachrichtigungen haben wir keine Empfänger.

.. index::
    single: Twig;for

Die Browser-Benachrichtigung verwendet *Flash-Messages* über den *Benachrichtigungsbereich*. Wir können sie anzeigen, indem wir das Konferenz-Template anpassen:

.. code-block:: diff
    :caption: patch_file

    --- a/templates/conference/show.html.twig
    +++ b/templates/conference/show.html.twig
    @@ -3,6 +3,13 @@
     {% block title %}Conference Guestbook - {{ conference }}{% endblock %}

     {% block body %}
    +    {% for message in app.flashes('notification') %}
    +        <div class="alert alert-info alert-dismissible fade show">
    +            {{ message }}
    +            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
    +        </div>
    +    {% endfor %}
    +
         <h2 class="mb-5">
             {{ conference }} Conference
         </h2>

Nutzer*innen werden nun darüber informiert, dass ihr Kommentar moderiert wird:

.. figure:: screenshots/form-success-notification.png
    :alt: /conference/amsterdam-2019
    :align: center
    :figclass: with-browser

Als zusätzlichen Bonus haben wir eine nette Benachrichtigung oben in der Website, wenn ein Formularfehler vorliegt:

.. figure:: screenshots/form-error-notification.png
    :alt: /conference/amsterdam-2019
    :align: center
    :figclass: with-browser

.. tip::

    Flash-Meldungen verwenden das *HTTP-Session*-System als Speichermedium. Die wichtigste Auswirkung ist, dass der HTTP-Cache deaktiviert ist, da das Session-System gestartet werden muss, um zu prüfen ob Nachrichten vorliegen.

    Dies ist der Grund, warum wir den Code für die Flash-Meldungen in das ``show.html.twig``-Template und nicht ins Basis-Template eingefügt haben. Sonst hätten wir den HTTP-Cache für die Homepage verloren.

Administrator*innen per E-Mail benachrichtigen
----------------------------------------------

Anstatt über das ``MailerInterface`` eine E-Mail zu senden, um die Administrator*innen über neue Kommentare zu informieren, wechseln wir zur Notifier-Komponente im Message-Handler:

.. code-block:: diff
    :caption: patch_file

    --- a/src/MessageHandler/CommentMessageHandler.php
    +++ b/src/MessageHandler/CommentMessageHandler.php
    @@ -4,14 +4,14 @@ namespace App\MessageHandler;

     use App\ImageOptimizer;
     use App\Message\CommentMessage;
    +use App\Notification\CommentReviewNotification;
     use App\Repository\CommentRepository;
     use App\SpamChecker;
     use Doctrine\ORM\EntityManagerInterface;
     use Psr\Log\LoggerInterface;
    -use Symfony\Bridge\Twig\Mime\NotificationEmail;
    -use Symfony\Component\Mailer\MailerInterface;
     use Symfony\Component\Messenger\Handler\MessageHandlerInterface;
     use Symfony\Component\Messenger\MessageBusInterface;
    +use Symfony\Component\Notifier\NotifierInterface;
     use Symfony\Component\Workflow\WorkflowInterface;

     class CommentMessageHandler implements MessageHandlerInterface
    @@ -21,22 +21,20 @@ class CommentMessageHandler implements MessageHandlerInterface
         private $commentRepository;
         private $bus;
         private $workflow;
    -    private $mailer;
    +    private $notifier;
         private $imageOptimizer;
    -    private $adminEmail;
         private $photoDir;
         private $logger;

    -    public function __construct(EntityManagerInterface $entityManager, SpamChecker $spamChecker, CommentRepository $commentRepository, MessageBusInterface $bus, WorkflowInterface $commentStateMachine, MailerInterface $mailer, ImageOptimizer $imageOptimizer, string $adminEmail, string $photoDir, LoggerInterface $logger = null)
    +    public function __construct(EntityManagerInterface $entityManager, SpamChecker $spamChecker, CommentRepository $commentRepository, MessageBusInterface $bus, WorkflowInterface $commentStateMachine, NotifierInterface $notifier, ImageOptimizer $imageOptimizer, string $photoDir, LoggerInterface $logger = null)
         {
             $this->entityManager = $entityManager;
             $this->spamChecker = $spamChecker;
             $this->commentRepository = $commentRepository;
             $this->bus = $bus;
             $this->workflow = $commentStateMachine;
    -        $this->mailer = $mailer;
    +        $this->notifier = $notifier;
             $this->imageOptimizer = $imageOptimizer;
    -        $this->adminEmail = $adminEmail;
             $this->photoDir = $photoDir;
             $this->logger = $logger;
         }
    @@ -62,13 +60,7 @@ class CommentMessageHandler implements MessageHandlerInterface

                 $this->bus->dispatch($message);
             } elseif ($this->workflow->can($comment, 'publish') || $this->workflow->can($comment, 'publish_ham')) {
    -            $this->mailer->send((new NotificationEmail())
    -                ->subject('New comment posted')
    -                ->htmlTemplate('emails/comment_notification.html.twig')
    -                ->from($this->adminEmail)
    -                ->to($this->adminEmail)
    -                ->context(['comment' => $comment])
    -            );
    +            $this->notifier->send(new CommentReviewNotification($comment), ...$this->notifier->getAdminRecipients());
             } elseif ($this->workflow->can($comment, 'optimize')) {
                 if ($comment->getPhotoFilename()) {
                     $this->imageOptimizer->resize($this->photoDir.'/'.$comment->getPhotoFilename());

Die ``getAdminRecipients()``-Methode gibt die Admin-Empfänger wie in der Notifier-Konfiguration konfiguriert zurück; aktualisiere sie jetzt, um Deine eigene E-Mail-Adresse hinzuzufügen:

.. code-block:: diff
    :caption: patch_file

    --- a/config/packages/notifier.yaml
    +++ b/config/packages/notifier.yaml
    @@ -13,4 +13,4 @@ framework:
                 medium: ['email']
                 low: ['email']
             admin_recipients:
    -            - { email: admin@example.com }
    +            - { email: "%env(string:default:default_admin_email:ADMIN_EMAIL)%" }

Erstelle nun die ``CommentReviewNotification``-Klasse:

.. code-block:: php
    :caption: src/Notification/CommentReviewNotification.php

    namespace App\Notification;

    use App\Entity\Comment;
    use Symfony\Component\Notifier\Message\EmailMessage;
    use Symfony\Component\Notifier\Notification\EmailNotificationInterface;
    use Symfony\Component\Notifier\Notification\Notification;
    use Symfony\Component\Notifier\Recipient\Recipient;

    class CommentReviewNotification extends Notification implements EmailNotificationInterface
    {
        private $comment;

        public function __construct(Comment $comment)
        {
            $this->comment = $comment;

            parent::__construct('New comment posted');
        }

        public function asEmailMessage(Recipient $recipient, string $transport = null): ?EmailMessage
        {
            $message = EmailMessage::fromNotification($this, $recipient, $transport);
            $message->getMessage()
                ->htmlTemplate('emails/comment_notification.html.twig')
                ->context(['comment' => $this->comment])
            ;

            return $message;
        }
    }

Die ``asEmailMessage()``-Methode des ``EmailNotificationInterface`` ist optional, aber sie erlaubt es, die E-Mail anzupassen.

Ein Vorteil der Verwendung des Notifiers anstelle direkter Verwendung des Mailers, um E-Mails zu versenden, besteht darin, dass Ersterer die Benachrichtigung von dem dafür verwendeten "Kanal" entkoppelt. Wie Du sehen kannst, steht da nicht explizit, dass die Benachrichtigung per E-Mail erfolgen soll.

Stattdessen wird der Kanal in ``config/packages/notifier.yaml`` abhängig von der *Wichtigkeit* der Benachrichtigung konfiguriert (Grundeinstellung ist ``low``):

.. code-block:: yaml
    :caption: config/packages/notifier.yaml
    :class: ignore

    framework:
    notifier:
        channel_policy:
            # use chat/slack, chat/telegram, sms/twilio or sms/nexmo
            urgent: ['email']
            high: ['email']
            medium: ['email']
            low: ['email']

Wir haben über die Kanäle ``browser`` und ``email`` gesprochen. Lass uns ein paar ausgefallenere anschauen.

Mit Administrator*innen chatten
-------------------------------

.. index::
    single: Slack

Seien wir ehrlich, wir alle sehnen uns nach positivem oder zumindest konstruktivem Feedback. Wenn jemand einen Kommentar mit Wörtern wie "toll" oder "awesome" schreibt, sollten wir diesen vielleicht schneller akzeptieren als andere.

Auf solche Kommentare möchten wir zusätzlich zur normalen E-Mail in einem Instant Messaging-System wie Slack oder Telegram aufmerksam gemacht werden.

.. index::
    single: Components;Notifier
    single: Notifier

Installiere den Slack-Support für Symfony Notifier:

.. code-block:: bash

    $ symfony composer req slack-notifier

Erstelle den Slack-DSN mit einem Slack-Zugriffs-Token und dem Slack-Channel-Identifier, an den Du Nachrichten senden möchtest: ``slack://ACCESS_TOKEN@default?channel=CHANNEL``.

.. index::
    single: Command;secrets:set

Da das Zugriffs-Token eine sensible Information ist, speichere den Slack-DSN im Secret-Store:

.. code-block:: bash
    :class: answers(slack://ACCESS_TOKEN@default?channel=CHANNEL)

    $ symfony console secrets:set SLACK_DSN

Gleiches gilt für das Produktivsystem:

.. code-block:: bash
    :class: answers(slack://ACCESS_TOKEN@default?channel=CHANNEL)

    $ APP_ENV=prod symfony console secrets:set SLACK_DSN

Aktiviere Slack-Support in Chatter:

.. code-block:: diff
    :caption: patch_file

    --- a/config/packages/notifier.yaml
    +++ b/config/packages/notifier.yaml
    @@ -1,7 +1,7 @@
     framework:
         notifier:
    -        #chatter_transports:
    -        #    slack: '%env(SLACK_DSN)%'
    +        chatter_transports:
    +            slack: '%env(SLACK_DSN)%'
             #    telegram: '%env(TELEGRAM_DSN)%'
             #texter_transports:
             #    twilio: '%env(TWILIO_DSN)%'

Passe die Benachrichtigungsklasse an, um Nachrichten abhängig vom Kommentartext weiterzuleiten (ein einfacher regulärer Ausdruck erledigt diese Aufgabe):

.. code-block:: diff
    :caption: patch_file

    --- a/src/Notification/CommentReviewNotification.php
    +++ b/src/Notification/CommentReviewNotification.php
    @@ -29,4 +29,15 @@ class CommentReviewNotification extends Notification implements EmailNotificatio

             return $message;
         }
    +
    +    public function getChannels(Recipient $recipient): array
    +    {
    +        if (preg_match('{\b(great|awesome)\b}i', $this->comment->getText())) {
    +            return ['email', 'chat/slack'];
    +        }
    +
    +        $this->importance(Notification::IMPORTANCE_LOW);
    +
    +        return ['email'];
    +    }
     }

Wir haben auch die Wichtigkeit der "normalen" Kommentare geändert, da dies das Design der E-Mail leicht verändert.

Und fertig! Schreibe einen Kommentar mit "awesome" im Text und erhalte eine Nachricht über Slack.

Wie bei E-Mails kannst Du ein ``ChatNotificationInterface`` implementieren, um die Standard-Darstellung der Slack-Nachricht zu überschreiben:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Notification/CommentReviewNotification.php
    +++ b/src/Notification/CommentReviewNotification.php
    @@ -3,12 +3,17 @@
     namespace App\Notification;

     use App\Entity\Comment;
    +use Symfony\Component\Notifier\Bridge\Slack\Block\SlackDividerBlock;
    +use Symfony\Component\Notifier\Bridge\Slack\Block\SlackSectionBlock;
    +use Symfony\Component\Notifier\Bridge\Slack\SlackOptions;
    +use Symfony\Component\Notifier\Message\ChatMessage;
     use Symfony\Component\Notifier\Message\EmailMessage;
    +use Symfony\Component\Notifier\Notification\ChatNotificationInterface;
     use Symfony\Component\Notifier\Notification\EmailNotificationInterface;
     use Symfony\Component\Notifier\Notification\Notification;
     use Symfony\Component\Notifier\Recipient\Recipient;

    -class CommentReviewNotification extends Notification implements EmailNotificationInterface
    +class CommentReviewNotification extends Notification implements EmailNotificationInterface, ChatNotificationInterface
     {
         private $comment;

    @@ -30,6 +35,28 @@ class CommentReviewNotification extends Notification implements EmailNotificatio
             return $message;
         }

    +    public function asChatMessage(Recipient $recipient, string $transport = null): ?ChatMessage
    +    {
    +        if ('slack' !== $transport) {
    +            return null;
    +        }
    +
    +        $message = ChatMessage::fromNotification($this, $recipient, $transport);
    +        $message->subject($this->getSubject());
    +        $message->options((new SlackOptions())
    +            ->iconEmoji('tada')
    +            ->iconUrl('https://guestbook.example.com')
    +            ->username('Guestbook')
    +            ->block((new SlackSectionBlock())->text($this->getSubject()))
    +            ->block(new SlackDividerBlock())
    +            ->block((new SlackSectionBlock())
    +                ->text(sprintf('%s (%s) says: %s', $this->comment->getAuthor(), $this->comment->getEmail(), $this->comment->getText()))
    +            )
    +        );
    +
    +        return $message;
    +    }
    +
         public function getChannels(Recipient $recipient): array
         {
             if (preg_match('{\b(great|awesome)\b}i', $this->comment->getText())) {

Schon besser, aber gehen wir noch einen Schritt weiter. Wäre es nicht toll, einen Kommentar direkt aus Slack akzeptieren oder ablehnen zu können?

Erweitere die Benachrichtigung, damit sie die Review-URL annimmt, und füge zwei Buttons zur Slack-Nachricht hinzu:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Notification/CommentReviewNotification.php
    +++ b/src/Notification/CommentReviewNotification.php
    @@ -3,6 +3,7 @@
     namespace App\Notification;

     use App\Entity\Comment;
    +use Symfony\Component\Notifier\Bridge\Slack\Block\SlackActionsBlock;
     use Symfony\Component\Notifier\Bridge\Slack\Block\SlackDividerBlock;
     use Symfony\Component\Notifier\Bridge\Slack\Block\SlackSectionBlock;
     use Symfony\Component\Notifier\Bridge\Slack\SlackOptions;
    @@ -16,10 +17,12 @@ use Symfony\Component\Notifier\Recipient\Recipient;
     class CommentReviewNotification extends Notification implements EmailNotificationInterface, ChatNotificationInterface
     {
         private $comment;
    +    private $reviewUrl;

    -    public function __construct(Comment $comment)
    +    public function __construct(Comment $comment, string $reviewUrl)
         {
             $this->comment = $comment;
    +        $this->reviewUrl = $reviewUrl;

             parent::__construct('New comment posted');
         }
    @@ -52,6 +55,10 @@ class CommentReviewNotification extends Notification implements EmailNotificatio
                 ->block((new SlackSectionBlock())
                     ->text(sprintf('%s (%s) says: %s', $this->comment->getAuthor(), $this->comment->getEmail(), $this->comment->getText()))
                 )
    +            ->block((new SlackActionsBlock())
    +                ->button('Accept', $this->reviewUrl, 'primary')
    +                ->button('Reject', $this->reviewUrl.'?reject=1', 'danger')
    +            )
             );

             return $message;

Es geht nun darum, Änderungen rückwärts zu verfolgen. Aktualisiere zunächst den Message-Handler, um die Review-URL zu übergeben:

.. code-block:: diff
    :caption: patch_file

    --- a/src/MessageHandler/CommentMessageHandler.php
    +++ b/src/MessageHandler/CommentMessageHandler.php
    @@ -60,7 +60,8 @@ class CommentMessageHandler implements MessageHandlerInterface

                 $this->bus->dispatch($message);
             } elseif ($this->workflow->can($comment, 'publish') || $this->workflow->can($comment, 'publish_ham')) {
    -            $this->notifier->send(new CommentReviewNotification($comment), ...$this->notifier->getAdminRecipients());
    +            $notification = new CommentReviewNotification($comment, $message->getReviewUrl());
    +            $this->notifier->send($notification, ...$this->notifier->getAdminRecipients());
             } elseif ($this->workflow->can($comment, 'optimize')) {
                 if ($comment->getPhotoFilename()) {
                     $this->imageOptimizer->resize($this->photoDir.'/'.$comment->getPhotoFilename());

Wie Du sehen kannst, sollte die Review-URL Teil der Kommentar-Nachricht sein, fügen wir sie jetzt hinzu:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Message/CommentMessage.php
    +++ b/src/Message/CommentMessage.php
    @@ -5,14 +5,21 @@ namespace App\Message;
     class CommentMessage
     {
         private $id;
    +    private $reviewUrl;
         private $context;

    -    public function __construct(int $id, array $context = [])
    +    public function __construct(int $id, string $reviewUrl, array $context = [])
         {
             $this->id = $id;
    +        $this->reviewUrl = $reviewUrl;
             $this->context = $context;
         }

    +    public function getReviewUrl(): string
    +    {
    +        return $this->reviewUrl;
    +    }
    +
         public function getId(): int
         {
             return $this->id;

Aktualisiere schließlich die Controller, um die Review-URL zu generieren und übergebe sie an den Constructor der Kommentar-Nachricht:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Controller/AdminController.php
    +++ b/src/Controller/AdminController.php
    @@ -12,6 +12,7 @@ use Symfony\Component\HttpFoundation\Response;
     use Symfony\Component\HttpKernel\KernelInterface;
     use Symfony\Component\Messenger\MessageBusInterface;
     use Symfony\Component\Routing\Annotation\Route;
    +use Symfony\Component\Routing\Generator\UrlGeneratorInterface;
     use Symfony\Component\Workflow\Registry;
     use Twig\Environment;

    @@ -51,7 +52,8 @@ class AdminController extends AbstractController
             $this->entityManager->flush();

             if ($accepted) {
    -            $this->bus->dispatch(new CommentMessage($comment->getId()));
    +            $reviewUrl = $this->generateUrl('review_comment', ['id' => $comment->getId()], UrlGeneratorInterface::ABSOLUTE_URL);
    +            $this->bus->dispatch(new CommentMessage($comment->getId(), $reviewUrl));
             }

             return $this->render('admin/review.html.twig', [
    --- a/src/Controller/ConferenceController.php
    +++ b/src/Controller/ConferenceController.php
    @@ -17,6 +17,7 @@ use Symfony\Component\Messenger\MessageBusInterface;
     use Symfony\Component\Notifier\Notification\Notification;
     use Symfony\Component\Notifier\NotifierInterface;
     use Symfony\Component\Routing\Annotation\Route;
    +use Symfony\Component\Routing\Generator\UrlGeneratorInterface;
     use Twig\Environment;

     class ConferenceController extends AbstractController
    @@ -88,7 +89,8 @@ class ConferenceController extends AbstractController
                     'permalink' => $request->getUri(),
                 ];

    -            $this->bus->dispatch(new CommentMessage($comment->getId(), $context));
    +            $reviewUrl = $this->generateUrl('review_comment', ['id' => $comment->getId()], UrlGeneratorInterface::ABSOLUTE_URL);
    +            $this->bus->dispatch(new CommentMessage($comment->getId(), $reviewUrl, $context));

                 $notifier->send(new Notification('Thank you for the feedback; your comment will be posted after moderation.', ['browser']));

Code zu entkoppeln bedeutet Änderungen an mehreren Stellen, erleichtert aber das Testen, Wiederverwenden und Durchdenken unseres Codes.

Versuche es noch einmal, die Nachricht sollte jetzt in Ordnung sein:

.. image:: images/slack-message.png
    :align: center

Asynchron auf der ganzen Linie
------------------------------

Lass mich ein kleines Problem erklären, das wir lösen sollten. Für jeden Kommentar erhalten wir eine E-Mail und eine Slack-Nachricht. Wenn die Slack-Nachricht fehlerhaft ist (falsche Kanal-ID, falsches Token, ...), wird dreimal versucht die Messenger-Nachricht zu versenden, bevor sie verworfen wird. Da jedoch die E-Mail zuerst gesendet wird, erhalten wir drei E-Mails und keine Slack-Nachrichten. Eine Möglichkeit, dies zu beheben, besteht darin, Slack-Nachrichten asynchron (wie E-Mails) zu senden:

.. code-block:: diff
    :caption: patch_file

    --- a/config/packages/messenger.yaml
    +++ b/config/packages/messenger.yaml
    @@ -20,3 +20,5 @@ framework:
                 # Route your messages to the transports
                 App\Message\CommentMessage: async
                 Symfony\Component\Mailer\Messenger\SendEmailMessage: async
    +            Symfony\Component\Notifier\Message\ChatMessage: async
    +            Symfony\Component\Notifier\Message\SmsMessage: async

Sobald alles asynchron ist, sind die Nachrichten voneinander unabhängig. Wir haben auch asynchrone SMS-Nachrichten aktiviert, falls Du auch auf Deinem Telefon benachrichtigt werden möchtest.

Nutzer*innen per E-Mail benachrichtigen
---------------------------------------

Die letzte Aufgabe besteht darin, die Nutzer*innen zu benachrichtigen, wenn deren Kommentar genehmigt wird. Wie wäre es, wenn Du das selbst umsetzt?

.. sidebar:: Weiterführendes

    * `Symfony Flash-Meldungen <https://symfony.com/doc/current/controller.html#flash-messages>`_.
